Restore grid and D-pad styles in styles.css

--- a/jogos/FROGGER/styles.css
+++ b/jogos/FROGGER/styles.css
@@ -149,7 +149,7 @@ h3 {
 /* ===== D‑pad styles (ergonomia móvel) ===== */
 #dpad {
     position: fixed;
-    left: 16px;
+    right: 16px;
     bottom: 16px;
     width: 168px;
     height: 168px;
@@ -213,3 +213,4 @@ h3 {
         display: none;
     }
 }
+
