--- a/jogos/PACMAN/styles.css
+++ b/jogos/PACMAN/styles.css
@@ -1,3 +1,9 @@
+*,
+*::before,
+*::after {
+    box-sizing: border-box;
+}
+
 body {
     background-image: url(images/background.png);
     background-size: cover;
@@ -10,36 +16,43 @@ body {
     padding-top: 0px;
 }
 
+/* Scoreboard - responsivo */
 .scoreboard {
     color: rgb(238, 12, 12);
     font-family: fantasy;
-    font-size: 22px;
+    font-size: clamp(16px, 3.5vw, 22px);
     border: 5px solid black;
     padding: 5px 20px;
     display: flex;
     justify-content: space-between;
-    width: 250px;
+    width: min(250px, 90vw);
     margin-top: 25px;
 }
 
+/* Grid (tabuleiro) - responsivo e sempre quadrado */
 .grid {
-    width: 560px;
-    height: 560px;
+    width: min(560px, 96vw, 96vh);
+    aspect-ratio: 1 / 1;
     border: solid black 2px;
-    display: flex;
-    flex-wrap: wrap;
+    display: grid;
+    grid-template-columns: repeat(28, 1fr);
+    grid-auto-rows: 1fr;
     background-color: black;
-    overflow: visible;
+    overflow: hidden;
+    max-width: 560px;
 }
 
 .grid div {
-    width: 20px;
-    height: 20px;
+    width: 100%;
+    height: 100%;
+    aspect-ratio: 1 / 1;
 }
 
 .pac-dot {
     background-image: url(images/pacdot.gif);
-    background-size: cover;
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-position: center;
 }
 
 .wall {
@@ -48,31 +61,43 @@ body {
 
 .power-pellet {
     background-image: url(images/cherry.png);
-    background-size: cover;
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-position: center;
 }
 
 .blinky {
     background-image: url(images/blinky.png);
-    background-size: cover;
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-position: center;
 }
 
 .pinky {
     background-image: url(images/pinky.png);
-    background-size: cover;
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-position: center;
 }
 
 .inky {
     background-image: url(images/inky.png);
-    background-size: cover;
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-position: center;
 }
 
 .clyde {
     background-image: url(images/clyde.png);
-    background-size: cover;
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-position: center;
 }
 
 .pac-man {
-    background-size: cover;
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-position: center;
 }
 
 .pac-man.pac-right {
@@ -97,7 +122,7 @@ body {
 
 .scared-ghost {
     background-image: url(images/scaredghost.png);
-    background-size: cover;
+    background-size: contain;
     background-position: center;
     position: relative;
     z-index: 1;
